<resources>
    <string name ="mapsKey">Aoiqr6Fxs-LOizbIYg4KTZnYvOuZKbVQnZ5Pl3QuG0UC3aqBZWuODxU_x4ybWDjr</string>
    <string name="app_name">Yard.ly</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombres">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="direccion">Direccion</string>
    <string name="cncel">
        <u>Cancelar</u>
    </string>
    <string name="regis">Registro</string>
    <string name="tyc">Acepto terminos y condiciones</string>
    <string name="politicprivacy">Acepto politicas de privacidad</string>
    <string name="SU">Sign Up</string>
    <string name="login">Log In</string>
    <string name="Guardar">Guardar</string>
    <string name="dirfrec">Ver Direcciones Frecuentes</string>
    <string name="dirfrec1">Direcciones Frecuentes</string>
    <string name="fotperfil">seleccion de foto de perfil</string>
    <string name="nomproy">Nombre producto</string>
    <string name="nomproy2">Pedido</string>
    <string name="descriprod">Descripcion</string>
    <string name="precioprodu">Precio</string>
    <string name="cantidadpro">Cantidad</string>
    <string name="tot">Total</string>
    <string name="agregCarr">Agregar al carrito</string>
    <string name="opini">Opiniones</string>
    <string name="imgproduct">Imagen de producto</string>
    <string name="agregar">Agregar</string>
    <string name="nomEsta">Nombre Establecimiento</string>
    <string name="products">Productos</string>
    <string name="products2">Productos:</string>
    <string name="NomApp">Yard.ly</string>
    <string name="Home">Home</string>
    <string name="BusquedaP">Busqueda de Productos</string>
    <string name="ordenR">Ordenes Recientes</string>
    <string name="CarritoCompras">Carrito de Compras</string>
    <string name="perf">Mi Perfil</string>
    <string name="log_in">Log In</string>
    <string name="registrar"><u>SIGN UP</u></string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="continuar">Continuar</string>
    <string name="title_activity_principal">principal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="addComment">Add comment</string>
    <string name="Comment">Comment</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="llegoDomicilioC">Llegada de pedidos</string>
    <string name="DescripcionDomicilioC">Notificacion de cuando llegan los pedidos</string>
    <string name="llegoDomicilio">Llego tu pedido</string>
    <string name="DescripcionDomicilio">El domiciliario esta esperandote en tu puerta.</string>
    <string name="CommentarioHint">Escriba aca su comentario</string>
    <string name="findUs">find Us</string>
    <string name="ComentariosProduct">Comentarios</string>
    <string name="Comentarios">
        <u>Cancelar</u>
    </string>
    <string name="Calificar">Calificar</string>
    <string-array name="tipoProducto">
        <item>Ropa</item>
        <item>Plato</item>
    </string-array>
    <string name="title_activity_porductosx_restaurante">PorductosxRestaurante</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_productxrestaurant">productxrestaurant</string>
    <string name="title_activity_usuario_entrega">Map</string>
    <string name="title_activity_mapa_comida">Comida Cercana</string>
    <string name="Calificacion">Calificacion:</string>
    <string name="Opinion">Comentario:</string>
    <string name="hintMsj">Escriba su mensaje</string>string>
    <string name="DescripcionMensaje">Notificacion cuando llega un mensaje</string>
    <string name="Mensajenuevo">Mensaje nuevo</string>
    <string name="DescripcionMensajeNot">Tienes un mensaje nuevo</string>
    <string name= "titlemensaje">Oprime para ver el mensaje</string>
</resources>
