<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/hoja"
        android:title="@string/Home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/busqueda"
        android:icon="@drawable/buscar"
        android:title="@string/BusquedaP"
        app:showAsAction="always"/>
    <item
        android:id="@+id/recientes"
        android:icon="@drawable/apoyo"
        android:title="Historial de Compras"
        app:showAsAction="always"/>
    <item
        android:id="@+id/carrito"
        android:icon="@drawable/carro"
        android:title="@string/CarritoCompras"
        app:showAsAction="always"/>
    <item
        android:id="@+id/MiPerfil"
        android:icon="@drawable/usuario"
        android:title="Mi Perfil"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/CerrarSesionU"
        android:icon="@drawable/usuario"
        android:title="Cerrar Sesión"
        app:showAsAction="ifRoom"/>
</menu>