<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/clr_justWhite"
    tools:context=".RegistroFoto">

    <TextView
        android:id="@+id/textViewFot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/regis"
        android:textAppearance="@style/txt_Big"
        android:textColor="@color/clr_greenYardly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/clr_greenYardly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFot" />

    <ImageButton
        android:id="@+id/selecFotperf"
        android:layout_width="297dp"
        android:layout_height="307dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/fotperfil"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:srcCompat="@drawable/img_select" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/clr_greenYardly"
        android:text="@string/tyc"
        android:textAppearance="@style/txt_normal"
        android:textColor="@color/clr_greenYardly"
        app:layout_constraintBottom_toTopOf="@id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/clr_greenYardly"
        android:text="@string/politicprivacy"
        android:textAppearance="@style/txt_normal"
        android:textColor="@color/clr_greenYardly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3" />



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="356dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >



        <TextView
            android:id="@+id/botonCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="@font/cg_family"
            android:padding="5dp"
            android:text="@string/cncel"
            android:textColor="@color/clr_greenYardly"
            android:textSize="20sp"
            android:focusable="true" />
        <Button
            android:id="@+id/botonRegistrarFoto"
            style="@style/btn_Stl1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/continuar"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
