<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_greenYardly"
    tools:context=".RegistroFoto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/activity_actividad_baseu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/selecFotperf"
            android:layout_width="178dp"
            android:layout_height="175dp"
            android:background="@null"
            android:contentDescription="@string/fotperfil"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:srcCompat="@drawable/perfi" />

        <LinearLayout
            android:id="@+id/layl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selecFotperf"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/nombreUsRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:ems="10"
                android:hint="@string/nombres"
                android:inputType="textPersonName"
                android:textColor="@color/clr_justWhite"
                android:textColorHint="@color/clr_justWhite" />

            <EditText
                android:id="@+id/mailUsRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/clr_justWhite"
                android:textColorHint="@color/clr_justWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/frm_reallyrouded"
            android:backgroundTint="@color/clr_greenYardly"
            android:text="@string/Guardar"
            android:textColor="@color/clr_justWhite"
            app:layout_constraintTop_toBottomOf="@+id/layl"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCancP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frm_reallyrouded"
            android:backgroundTint="@color/clr_greenYardly"
            android:text="@string/cncel"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/layl"
            app:layout_constraintEnd_toStartOf="@+id/btnGuardarP"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
