<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logActivity"
    android:background="@drawable/Background_li">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yard.ly"
        style="@style/yardlyTitle"
        android:textColor="@color/clr_greenYardly"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frm_rreditt"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nombreUsuario"
            android:inputType="textWebEmailAddress"
            android:paddingStart="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textAppearance="@style/txt_kindaBig"
            android:textColorHint="@color/clr_greenYardly"
            android:layout_marginVertical="15dp"/>


        <EditText
            android:id="@+id/et_pword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/frm_rreditt"
            android:ems="10"
            android:textAppearance="@style/txt_kindaBig"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColorHint="@color/clr_greenYardly"
            android:layout_marginVertical="15dp"/>

        <Button
            android:id="@+id/botonIngresar"
            style="@style/btn_Stl1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/txt_normal"
            android:text="@string/registrar"
            android:layout_gravity="center"
            android:textColor="@color/clr_greenYardly"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_forgotpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/txt_normal"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textColor="@color/clr_greenYardly"
            android:clickable="true"
            android:padding="10dp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>